Implement UAST code generation for Scala #SCL-20562